kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app-service
  namespace: api-app-namespace
spec:
  selector:
    app: api-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
