kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-app-ingress
  namespace: api-app-namespace
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: api-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: api-app.my-domain.com
    http:
      paths:
      - path: /planning-tech
        pathType: Prefix
        backend:
          service:
            name: api-app
            port:
              name: http
      - path: /world
        pathType: Prefix
        backend:
          service:
            name: api-app
            port:
              name: http
